--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,140 +1,72 @@
-<section class="oe_container">
+<section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#000; font-weight: 700;">RFQ Separate <span style="color:#0782a0;">Sequence</span></h2>
-         <p class="oe_slogan" style="font-size: 19px;color: gray;">Different RFQ/PO sequence.</p>
-        <h4 class="oe_slogan"><a style="color: #0782a0;" href="https://www.smartway-jo.com">Smart Way Business Solutions</a> </h4>
-        <div class="oe_span12">
-
-        </div>
+        <h2 class="oe_slogan">Customer Sequence</h2>
+        <h2 class="oe_slogan">Give unique code to each customer</h2>
+        <h4 class="oe_slogan"><a href="https://www.cybrosys.com">Cybrosys Technologies</a></h4>
     </div>
 </section>
 
-<section class="oe_container ">
-    <div class="oe_row oe_spaced">
-
-         <div class="oe_centered oe_slogan " style="width: 1000px; height: 50px;  border-radius: 30px; padding: 10px 0;">
-              <div class="oe_span2" style="background: #595a5c; padding: 14px; border-radius: 30px 0 0px 30px;">
-                  <span style="font-size: 16px; color: #fff; font-weight: 700;">
-                      1
-                  </span></div>
-              <div class="oe_span10 oe_leftalign" style="background: #0782a0; padding: 14px; border-radius: 0 0px 0 0;">
-                  <span style="font-size: 16px; font-weight: bold; color: #fff;">
-                      Separate sequences for your RFQs.
-                      </span></div>
-          </div>
-
-          <div class="oe_centered oe_slogan " style="width: 1000px; height: 50px;  border-radius: 30px; padding: 10px 0;">
-              <div class="oe_span2" style="background: #595a5c; padding: 14px; border-radius: 30px 0 0px 30px;">
-                  <span style="font-size: 16px; color: #fff; font-weight: 700;">
-                      2
-                  </span></div>
-              <div class="oe_span10 oe_leftalign" style="background: #0782a0; padding: 14px; border-radius: 0 0px 0 0;">
-                  <span style="font-size: 16px; font-weight: bold; color: #fff;">
-                     No confusion between RFQs & Purchase orders.
-              </span></div>
-          </div>
-		 <div class="oe_centered oe_slogan " style="width: 1000px; height: 50px;  border-radius: 30px; padding: 10px 0;">
-              <div class="oe_span2" style="background: #595a5c; padding: 14px; border-radius: 30px 0 0px 30px;">
-                  <span style="font-size: 16px; color: #fff; font-weight: 700;">
-                      3
-                  </span></div>
-              <div class="oe_span10 oe_leftalign" style="background: #0782a0; padding: 14px; border-radius: 0 0px 0 0;">
-                  <span style="font-size: 16px; font-weight: bold; color: #fff;">
-                      Easy to use, simple and effective.
-              </span></div>
-          </div>
- 		<div class="oe_centered oe_slogan " style="width: 1000px; height: 50px;  border-radius: 30px; padding: 10px 0;">
-              <div class="oe_span2" style="background: #595a5c; padding: 14px; border-radius: 30px 0 0px 30px;">
-                  <span style="font-size: 16px; color: #fff; font-weight: 700;">
-                      4
-                  </span></div>
-              <div class="oe_span10 oe_leftalign" style="background: #0782a0; padding: 14px; border-radius: 0 0px 0 0;">
-                  <span style="font-size: 16px; font-weight: bold; color: #fff;">
-                   Free features update, upgrades and bug fixes.
-              </span></div>
-          </div>
-          <div class="oe_centered oe_slogan " style="width: 1000px; height: 50px;  border-radius: 30px; padding: 10px 0;">
-              <div class="oe_span2" style="background: #595a5c; padding: 14px; border-radius: 30px 0 0px 30px;">
-                  <span style="font-size: 16px; color: #fff; font-weight: 700;">
-                      5
-                  </span></div>
-              <div class="oe_span10 oe_leftalign" style="background: #0782a0; padding: 14px; border-radius: 0 0px 0 0;">
-                  <span style="font-size: 16px; font-weight: bold; color: #fff;">
-                   Compatible with Odoo Community & Enterprise editions.
-              </span></div>
-          </div>
-    </div>
- </section>
- 
-<section class="oe_container">
-    <div class="oe_row oe_spaced" style="background: #0782a0; height: 3px;"></div>
-      <h3 class="text-center"  style="font-size: 30px; color: #000;">User Guide</h3>
-    <div class="oe_row ">
-         <div class="oe_span12 oe_pic_ctr">
-            <p class="oe_mt32 oe_picture" style="background: #77777730; border-radius: 15px; padding: 30px; font-size: 17px;">
-                      Once you install the module a new sequence under Technical  Sequences will be added with the name RFQ Purchase,
-                       this will be used as a separate sequence for the newly created RFQ.
+<section class="oe_container oe_dark">
+    <div class="oe_spaced">
+        <div class="oe_picture">
+            <h3 class="oe_slogan">Overview</h3>
+            <p class="oe_mt32">
+                Now it is very easy to identify your customers with unique code. This module gives coding to the customers as well as to the supplier.
             </p>
         </div>
+    </div>
+</section>
+<section class="oe_container">
+    <div class="oe_spaced">
+        <h4 class="oe_slogan">Company form</h4>
         <div class="oe_span12">
-            <img class="oe_picture oe_screenshot" src="1.png" style="width: 100%; max-height: 480px;"/>
+            <p class='oe_mt32'>
+                &#x261B; Give the starting number of code.<br>
+                &#x261B; You can give separate starting for each company if it is a multi company.<br>
+            </p>
+            <div class="oe_demo oe_picture oe_screenshot" style="max-height: 100%;">
+                <img src="company_form.png">
+            </div>
         </div>
     </div>
 </section>
-<section class="oe_container">
-    <div class="oe_row" style="background: #0782a0; height: 3px;"></div>
-    <div class="oe_row oe_spaced">
-         <div class="oe_span12 oe_pic_ctr">
-            <p class="oe_mt32 oe_picture" style="background: #77777730; border-radius: 15px; padding: 30px; font-size: 17px;">
-			    1 & 2 are the 'Prefix' and 'Suffix' which will be added to the beginning and ending of the RFQ number if filled.<br/>
-			    3 is the length of the sequence after the 'Prefix' and before the 'Suffix'.<br/>
-			    4 Indicates how much the next sequence will increase.
-            </p>
-        </div>
-         <div class="oe_span12">
-				<img class="oe_picture oe_screenshot" src="2.png" style="width: 100%; max-height: 480px;">
-				<br/>
-				<img class="oe_picture oe_screenshot" src="3.png" style="width: 100%; max-height: 480px;">
-		</div>
-    </div>
-</section>
-<section class="oe_container">
-    <div class="oe_row" style="background: #0782a0; height: 3px;"></div>
-    <div class="oe_row oe_spaced">
-    	<div class="oe_span12 oe_pic_ctr">
-            <p class="oe_mt32 oe_picture" style="background: #77777730; border-radius: 15px; padding: 30px; font-size: 17px;">
-			  After confirmation, it turns into a separate PO and also upon cancellation and reset to draft, it will take the original RFQ sequence.
-            </p>
-        </div>
+<section class="oe_container oe_dark">
+    <div class="oe_spaced">
+        <h4 class="oe_slogan">Customer Form</h4>
         <div class="oe_span12">
-            <img class="oe_picture oe_screenshot" src="4.png" style="width: 100%; max-height: 480px;"/>
+            <p class='oe_mt32'>
+                &#x261B; Create a customer and the code will generate automatically as defined in the company form..<br>
+            </p>
+            <div class="oe_demo oe_picture oe_screenshot" style="max-height: 100%;">
+                <img src="customer_form.png">
+            </div>
         </div>
     </div>
 </section>
 
-<section class="oe_container">
-    <div class="oe_row" style="height: 2px; background-image: linear-gradient(to right, #0782a0 50%, rgba(255, 255, 255, 0) 1%);background-position: top;background-size: 20px 1px; background-repeat: repeat-x;"></div>
-
-    <div class="oe_rightfit oe_leftfit" style="margin-top:-15px">
-        <img src="oe_footer_guideline.jpg" style="width: 100%;  max-height: 480px;"/>
-    </div>
-    <div class="oe_slogan">
-        <div class="oe_centeralign" style="margin-top: 30px;">
-            <a class="oe_button" href="mailto:support@smartway-jo.com"
-               style="text-align: center;width: 275px; background: #0782a0; font-size: 18px; box-shadow: none;">
-                <span class="fa fa-life-ring" style="font-size: 22px;  margin-right: 10px;"/>Get Support</a>
-
-            <a class="oe_button" href="https://www.smartway-jo.com/request_customization"
-               style="text-align: center;width: 275px; background: #0782a0; font-size: 18px; box-shadow: none;">
-                <span class="fa fa-cogs" style="font-size: 22px; margin-right: 10px;"/>
-                <span>Request Customization</span></a>
+<section class="oe_container oe_dark">
+    <h2 class="oe_slogan" style="margin-top:20px;" >Need Any Help?</h2>
+    <div class="oe_slogan" style="margin-top:10px !important;">
+        <div>
+            <a  class="btn btn-primary btn-lg mt8"
+            style="color: #FFFFFF !important;border-radius: 0;" href="https://www.cybrosys.com"><i
+            class="fa fa-envelope"></i> Email </a> <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/contact/"><i
+            class="fa fa-phone"></i> Contact Us </a> <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/odoo-customization-and-installation/"><i
+            class="fa fa-check-square"></i> Request Customization </a>
         </div>
-        <div class="oe_centeralign" style="margin-top: 30px;">
-        <a href="skype:smart.way-sw?call" style="color: #0782a0;"><i class="fa fa-2x fa-skype" style="width:35px;"></i></a>
-        <a href="https://www.linkedin.com/company/smartway-jo" target="_blank" style="color: #0782a0;"><i class="fa fa-2x fa-linkedin"style="width:35px;padding-left: 3px;"></i></a>
-        <a href="https://www.facebook.com/smartwayjo" target="_blank" style="color: #0782a0;"><i class="fa fa-2x fa-facebook" style="width:35px;padding-left: 8px;"></i></a>
-        <a href="https://www.youtube.com/channel/UCt_xfXm47W1CosriFYd8Qng" target="_blank" style="color: #0782a0;"><i  class="fa fa-2x fa-youtube" style="width:35px;padding-left: 3px;"></i></a>
-        <a href="https://plus.google.com/113828907945082021719" target="_blank" style="color: #0782a0;"><i class="fa fa-2x fa-google"style="width:35px;padding-left: 3px;"></i></a>
-       </div>
+        <br>
+        <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        <div>
+          <a href="https://twitter.com/cybrosys" target="_blank"><i class="fa fa-2x fa-twitter" style="color:white;background: #00a0d1;width:35px;"></i></a></td>
+          <a href="https://www.linkedin.com/company/cybrosys-technologies-pvt-ltd" target="_blank"><i class="fa fa-2x fa-linkedin" style="color:white;background: #31a3d6;width:35px;padding-left: 3px;"></i></a></td>
+          <a href="https://www.facebook.com/cybrosystechnologies" target="_blank"><i class="fa fa-2x fa-facebook" style="color:white;background: #3b5998;width:35px;padding-left: 8px;"></i></a></td>
+          <a href="https://plus.google.com/106641282743045431892/about" target="_blank"><i class="fa fa-2x fa-google-plus" style="color:white;background: #c53c2c;width:35px;padding-left: 3px;"></i></a></td>
+          <a href="https://in.pinterest.com/cybrosys" target="_blank"><i class="fa fa-2x fa-pinterest" style="color:white;background: #ac0f18;width:35px;padding-left: 3px;"></i></a></td>
+        </div>
     </div>
 </section>
+
