--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,72 +1,134 @@
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan">Customer Sequence</h2>
-        <h2 class="oe_slogan">Give unique code to each customer</h2>
-        <h4 class="oe_slogan"><a href="https://www.cybrosys.com">Cybrosys Technologies</a></h4>
-    </div>
-</section>
-
-<section class="oe_container oe_dark">
-    <div class="oe_spaced">
-        <div class="oe_picture">
-            <h3 class="oe_slogan">Overview</h3>
-            <p class="oe_mt32">
-                Now it is very easy to identify your customers with unique code. This module gives coding to the customers as well as to the supplier.
-            </p>
+<section class="oe_container bg-gray-lighter">
+    <div class="oe_row">
+        <div class="oe_span12">
+            <h2 class="oe_slogan">Sequence Number & Product Images on Sale Order, Delivery Order & Invoice Report.</h2>
+            <h3 class="oe_mt32 text-info text-center" style="font-size: 25px;">With this module you can easily see Product Images and Sequence Number in Sale Order, Delivery Order and Invoice Report.</h3>
         </div>
     </div>
 </section>
-<section class="oe_container">
-    <div class="oe_spaced">
-        <h4 class="oe_slogan">Company form</h4>
-        <div class="oe_span12">
-            <p class='oe_mt32'>
-                &#x261B; Give the starting number of code.<br>
-                &#x261B; You can give separate starting for each company if it is a multi company.<br>
-            </p>
-            <div class="oe_demo oe_picture oe_screenshot" style="max-height: 100%;">
-                <img src="company_form.png">
+<br/>
+<section class="container mt32">
+    <div class="row">
+        <h4 class="oe_slogan" style=" text-align: center;"><span align="center" class="label label-success" style="background-color:red;">Sale Order</span></h4>
+    </div>
+</section>
+<br/>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can see after we install the module you can see Product Image Configuration in Sale Order, Delivery Order and Invoice.After we tick the show sequence number and show print image boolean we can see sequence no and product image in Sale Order Report.You can also set the size of the image.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen1.png">
             </div>
         </div>
-    </div>
 </section>
-<section class="oe_container oe_dark">
-    <div class="oe_spaced">
-        <h4 class="oe_slogan">Customer Form</h4>
-        <div class="oe_span12">
-            <p class='oe_mt32'>
-                &#x261B; Create a customer and the code will generate automatically as defined in the company form..<br>
-            </p>
-            <div class="oe_demo oe_picture oe_screenshot" style="max-height: 100%;">
-                <img src="customer_form.png">
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can see Sequence No and Product Image in Quotation Report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen2.png">
             </div>
         </div>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">Suppose we set the image size as medium and you can see medium size image in report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen3.png">
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen4.png">
+            </div>
+        </div>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">Suppose we set the image size as large and you can see large size image in report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen5.png">
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen6.png">
+            </div>
+        </div>
+</section>
+<br/>
+<section class="container mt32">
+    <div class="row">
+        <h4 class="oe_slogan" style=" text-align: center;"><span align="center" class="label label-success" style="background-color:red;">Delivery Order</span></h4>
     </div>
 </section>
-
-<section class="oe_container oe_dark">
-    <h2 class="oe_slogan" style="margin-top:20px;" >Need Any Help?</h2>
-    <div class="oe_slogan" style="margin-top:10px !important;">
-        <div>
-            <a  class="btn btn-primary btn-lg mt8"
-            style="color: #FFFFFF !important;border-radius: 0;" href="https://www.cybrosys.com"><i
-            class="fa fa-envelope"></i> Email </a> <a
-            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-            href="https://www.cybrosys.com/contact/"><i
-            class="fa fa-phone"></i> Contact Us </a> <a
-            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-            href="https://www.cybrosys.com/odoo-customization-and-installation/"><i
-            class="fa fa-check-square"></i> Request Customization </a>
+<br/>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can also see Product Image Configuration in Delivery Order.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen7.png">
+            </div>
         </div>
-        <br>
-        <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
-        <div>
-          <a href="https://twitter.com/cybrosys" target="_blank"><i class="fa fa-2x fa-twitter" style="color:white;background: #00a0d1;width:35px;"></i></a></td>
-          <a href="https://www.linkedin.com/company/cybrosys-technologies-pvt-ltd" target="_blank"><i class="fa fa-2x fa-linkedin" style="color:white;background: #31a3d6;width:35px;padding-left: 3px;"></i></a></td>
-          <a href="https://www.facebook.com/cybrosystechnologies" target="_blank"><i class="fa fa-2x fa-facebook" style="color:white;background: #3b5998;width:35px;padding-left: 8px;"></i></a></td>
-          <a href="https://plus.google.com/106641282743045431892/about" target="_blank"><i class="fa fa-2x fa-google-plus" style="color:white;background: #c53c2c;width:35px;padding-left: 3px;"></i></a></td>
-          <a href="https://in.pinterest.com/cybrosys" target="_blank"><i class="fa fa-2x fa-pinterest" style="color:white;background: #ac0f18;width:35px;padding-left: 3px;"></i></a></td>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can see after we tick show sequence number and show print image boolean we can see sequence no and product image in Picking Operations Report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen8.png">
+            </div>
         </div>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">You can also see Sequence Number and Product Image in Delivery Slip Report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen9.png">
+            </div>
+        </div>
+</section>
+<br/>
+<section class="container mt32">
+    <div class="row">
+        <h4 class="oe_slogan" style=" text-align: center;"><span align="center" class="label label-success" style="background-color:red;">Invoice</span></h4>
     </div>
 </section>
-
+<br/>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can also see Product Image Configuration in Invoice.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen10.png">
+            </div>
+        </div>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container lead">
+        <div class="oe_row oe_spaced">
+            <div class="oe_span12">
+            <h3 class="text-info" style="font-size: 25px;">As you can see after we tick show sequence number and show print image boolean we can see sequence no and product image in Invoice Report.</h3>
+            <br/>
+            <img class="img-border img-responsive thumbnail" style="border: 3px solid black;" src="screen11.png">
+            </div>
+        </div>
+</section>
+<section class="oe_container oe_spaced"></section>
+<section class="oe_container oe_dark" style="overflow: hidden;
+background: #efefef;
+box-shadow: none;" >
+  <div class="oe_row oe_spaced"> 
+    <h2 class="oe_slogan">Free Support</h2>
+    <h3 class="oe_slogan" style="font-size: 20px;">You will get 60 Days free support incase any bugs or issue occur (Except data recovery).</h3>
+    <ol class="oe_mt32" style="text-align:left;">
+    <li>Incase of any question regarding this module feel free to email on <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=prince.odoo.up@gmail.com" target="_blank"><b style="color: #875A7B">prince.odoo.up@gmail.com</b></a></li>
+    <li>Please note that You're not allowed to distribute or resell this module after purchase!</li>
+    <li>Please share the screenshots with explanation or video file of the error or bugs faced.</li>
+    </ol>
+</div>
+</section>
